# lithair

./: .env.example  .gitignore  .markdownlint.json  .markdownlintrc  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cucumber.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  Lithair.code-workspace  Makefile  NETTOYAGE_RECAP.md  PUBLICATION_CHECKLIST.md  README.md  RECAP_SESSION_E2E.md  TEST_DIRECT.md  Taskfile.yml  benchmark_declarative_revolution.sh  benchmark_pure_declarative_3nodes.sh  benchmark_results_20250826_153940.json  benchmark_true_consensus_replication.sh  clippy.toml  config.example.toml  deny.toml  log.html  output.xml  package-lock.json  package.json  report.html  run_all_tests.sh  rust-toolchain.toml  test-docker-ci.sh
benchmarks/: Cargo.toml  main.rs  performance_benchmark.rs  simple_benchmark.rs  standalone_benchmark.rs
benchmarks/benches/: consensus_throughput.rs  replication_latency.rs  scc2_performance.rs  serialization_comparison.rs
cucumber-tests/: Cargo.toml  README.md  STRESS_TESTS.md
cucumber-tests/benches/: engine_stress_test.rs  filestorage_bench.rs  multi_table_stress.rs
cucumber-tests/features/: README.md  basic.feature  declarative_engine.feature  test_minimal.feature
cucumber-tests/features/core/: distribution.feature  distribution_clustering.feature  distribution_clustering.md  performance.feature  real_cluster_test.feature  security.feature
cucumber-tests/features/examples/: blog_avec_frontend.feature
cucumber-tests/features/integration/: declarative_models.feature  sessions_persistantes.feature  web_server.feature
cucumber-tests/features/observability/: metrics_monitoring.feature  monitoring.feature
cucumber-tests/features/performance/: DATABASE_E2E_README.md  README.md  bench_isolated.feature  cluster_stress_multi_model.feature  database_performance.feature  durability_test.feature  engine_direct_test.feature  engine_reliability_test.feature  event_sourcing_benchmark.feature  http_performance.feature  multi_file_durability.feature  serialization_modes.feature  snapshot_durability.feature  stress_1m_test.feature  stress_snapshot_1m.feature
cucumber-tests/features/persistence/: advanced_persistence.feature  event_sourcing.feature  hash_chain.feature
cucumber-tests/features/scenarios/: toutes_configurations.feature
cucumber-tests/features/steps/: mod.rs
cucumber-tests/src/: lib.rs  main.rs  test_app.rs
cucumber-tests/src/features/: mod.rs  world.rs
cucumber-tests/tests/: bench_isolated.rs  cluster_stress_test.rs  cucumber_tests.rs  database_perf_test.rs  declarative_test.rs  durability_test.rs  engine_direct_test.rs  engine_reliability_test.rs  integration_build_test.rs  multi_file_durability_test.rs  scaffolding_test.rs  serialization_test.rs  snapshot_durability_test.rs  stress_1m_test.rs  stress_snapshot_100k_test.rs  stress_snapshot_test.rs
cucumber-tests/tests/helpers/: mod.rs
cucumber-tests/tests/steps/: declarative_steps.rs
examples/03-rest-api/: Cargo.toml  README.md
examples/03-rest-api/src/: main.rs
examples/05-ecommerce/: Cargo.toml  README.md
examples/05-ecommerce/src/: main.rs
examples/07-auth-rbac-mfa/: .env.example  Cargo.toml  README.md
examples/07-auth-rbac-mfa/src/: main.rs
examples/10-blog-distributed/: Cargo.toml  README.md  blog_replicated_node.rs  run_cluster.sh  test_replication.sh
examples/10-blog-distributed/frontend/: index.html
examples/11-react/: .gitignore  Cargo.toml
examples/11-react/frontend/: index.html
examples/11-react/src/: main.rs
examples/13-vue/: Cargo.toml
examples/13-vue/frontend/: index.html
examples/13-vue/src/: main.rs
examples/15-astro/: Cargo.toml
examples/15-astro/frontend/: astro.config.mjs
examples/15-astro/src/: main.rs
examples/admin_google_sso/: Cargo.toml  README.md
examples/admin_google_sso/src/: main.rs
examples/advanced/datatable/: Cargo.toml  README.md
examples/blog_server/: Cargo.toml  README.md  run_blog_tests.sh
examples/blog_server/frontend/: index.html
examples/blog_server/src/: main.rs
examples/ecommerce_app/: Cargo.toml
examples/ecommerce_app/src/: main.rs
examples/lithair_playground/: Cargo.toml  PLAN.md  README.md  rolling_upgrade_test.sh  run_playground.sh
examples/lithair_playground/frontend/: index.html
examples/lithair_playground/src/: benchmark.rs  main.rs  models.rs  playground_api.rs  sse_events.rs
examples/raft_consistency_test/: Cargo.toml
examples/raft_consistency_test/src/: main.rs
examples/raft_replication_demo/: Cargo.toml  README.md  README_EXTERNAL_TESTING.md  bench_1000_crud_parallel.sh  bench_ddos_protection.sh  bench_http_server.sh  bench_http_server_stateless.sh  bench_oha.sh  comprehensive_crud_benchmark.sh  http_firewall_node.rs  http_hardening_node.rs  http_loadgen_demo.rs  pure_declarative_node.rs  run_cluster.sh  run_integration_tests.sh  verify_convergence.sh
examples/rbac_session_demo/: Cargo.toml  README.md
examples/rbac_session_demo/frontend/: index.html
examples/rbac_session_demo/src/: main.rs
examples/replication_stress_test/: Cargo.toml  README.md
examples/replication_stress_test/src/: bombarder.rs  main.rs
examples/scc2_server_demo/: Cargo.toml  README.md  run_demo.sh  run_gzip_compare.sh
examples/scc2_server_demo/src/: main.rs
examples/schema_migration_demo/: Cargo.toml  README.md  run-tests.sh  show-status.sh  test-approve.sh
examples/schema_migration_demo/baseline/: Product_v1.json
examples/schema_migration_demo/src/: main.rs
lithair-cli/: Cargo.toml  README.md
lithair-cli/src/: main.rs
lithair-cli/src/commands/: new.rs
lithair-cli/src/templates/: mod.rs  (+11 more)
lithair-core/: Cargo.toml  DURABILITY.md  README.md
lithair-core/examples/: frontend_http_server.rs  frontend_memory_demo.rs  rbac_password_test.rs
lithair-core/src/: lib.rs  model.rs  model_inspect.rs  prelude.rs  server.rs  testing.rs
lithair-core/tests/: benchmark_tests.rs
lithair-macros/: Cargo.toml  README.md
lithair-macros/src/: declarative.rs  declarative_simple.rs  declarative_types.rs  lib.rs  lifecycle.rs  lithair_model.rs  page.rs  rbac_role.rs  schema.rs
(+425 files in other folders)
