[workspace]
resolver = "2"
members = [
    # Core
    "lithair-core",
    "lithair-macros",
    "lithair-cli",

    # Examples (progressive complexity)
    "examples/01-hello-world",
    "examples/02-static-site",
    "examples/03-rest-api",
    "examples/04-blog",
    "examples/05-ecommerce",
    "examples/06-auth-sessions",
    "examples/07-auth-rbac-mfa",
    "examples/08-schema-migration",
    "examples/09-replication",
    "examples/10-blog-distributed",

    # Frontend framework integrations
    "examples/11-react",
    "examples/12-angular",
    "examples/13-vue",
    "examples/14-svelte",
    "examples/15-astro",

    # Advanced examples
    "examples/advanced/datatable",
    "examples/advanced/stress-test",
    "examples/advanced/consistency-test",
    "examples/advanced/playground",

    # Tests
    "cucumber-tests",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Lithair Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lithair/lithair"
description = "Lithair - Solid as stone, light as air. High-performance event-sourced database and application framework."

[workspace.lints.rust]
unused_must_use = "warn"

# Performance optimizations for benchmarking
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Fast release profile for CI - no LTO, more codegen units
[profile.ci]
inherits = "release"
lto = false
codegen-units = 16

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true

# Shared dependencies for stress tests and optimizations
[workspace.dependencies]
reqwest = { version = "0.13", features = ["json", "blocking", "rustls", "form"], default-features = false }
tokio = { version = "1.47", features = ["full"] }
serde_json = "1.0"
bincode = "2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
criterion = { version = "0.8.0", features = ["html_reports"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
hyper = { version = "1.7", features = ["full"] }
hyper-util = "0.1"
http-body-util = "0.1"
scc = "3.0"
openraft = "0.9"
cucumber = "0.21.1"
futures = "0.3"
