[package]
name = "lithair_benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "performance_benchmark"
path = "performance_benchmark.rs"

[[bin]]
name = "simple_benchmark"
path = "simple_benchmark.rs"

[[bin]]
name = "standalone_benchmark"
path = "standalone_benchmark.rs"

# Criterion benchmarks for detailed performance analysis
[[bench]]
name = "consensus_throughput"
harness = false

[[bench]]
name = "serialization_comparison"
harness = false

[[bench]]
name = "scc2_performance"
harness = false

[[bench]]
name = "replication_latency"
harness = false

[dependencies]
lithair-core = { path = "../lithair-core" }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
hyper = { version = "0.14", features = ["full"] }
scc = "2.1"
openraft = "0.9"
chrono = { version = "0.4", features = ["serde"] }