[package]
name = "ecommerce"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lithair-core = { path = "../../lithair-core" }
lithair-macros = { path = "../../lithair-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1.0"
