[package]
name = "auth-rbac-mfa"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Lithair RBAC + SSO Demo - Declarative authentication with multiple identity providers"
authors = ["Yoan Roblet (Arcker)"]

[[bin]]
name = "auth-rbac-mfa"
path = "src/main.rs"

[dependencies]
# Core Lithair framework
lithair-core = { path = "../../lithair-core" }
lithair-macros = { path = "../../lithair-macros" }

# Serialization & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP Server
hyper = { version = "1.7", features = ["full"] }
tokio = { version = "1.47", features = ["full"] }

# Authentication & Security
jsonwebtoken = "9.2"
sha2 = "0.10"
base64 = "0.21"

# Utilities
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
