[package]
name = "blog-distributed"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Lithair Blog with Raft Replication - Multi-node blog with RBAC and sessions"
authors = ["Yoan Roblet (Arcker)"]

[[bin]]
name = "blog-distributed-node"
path = "blog_replicated_node.rs"

[dependencies]
# Core Lithair framework
lithair-core = { path = "../../lithair-core", features = ["admin-ui"] }
lithair-macros = { path = "../../lithair-macros" }

# Serialization & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

# HTTP
bytes = "1.5"
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["full"] }

# Async Runtime
tokio = { version = "1.47", features = ["full"] }

# Utilities
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
