[package]
name = "notes-react"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "notes-react"
path = "src/main.rs"

[dependencies]
lithair-core = { path = "../../lithair-core" }
lithair-macros = { path = "../../lithair-macros" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
