[package]
name = "blog_server"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
lithair-core = { path = "../../lithair-core" }
lithair-macros = { path = "../../lithair-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
log = "0.4"
