[package]
name = "ecommerce_app"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
lithair-core = { path = "../../lithair-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
bincode = "2.0.0-rc.3"
anyhow = "1.0.100"

