[package]
name = "lithair_playground"
version = "0.1.0"
edition = "2021"
description = "Interactive showcase demonstrating all Lithair capabilities"
authors = ["Lithair Team"]

[[bin]]
name = "playground_node"
path = "src/main.rs"

[features]
default = []
# Schema v2: Adds 'category' field to PlaygroundItem
schema-v2 = []
# Schema v3: Adds 'rating' field to PlaygroundItem  
schema-v3 = ["schema-v2"]

[dependencies]
lithair-core = { path = "../../lithair-core", features = ["admin-ui"] }
lithair-macros = { path = "../../lithair-macros" }

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# HTTP
hyper = { version = "1", features = ["full"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# For SSE events
futures = "0.3"
async-stream = "0.3"

# Random for benchmarks
fastrand = "2"

# HTTP client for benchmarks and cluster status
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

[dev-dependencies]
