[package]
name = "raft_consistency_test"
version = "0.1.0"
edition = "2021"
description = "Automated Raft consistency testing with heavy load"

[[bin]]
name = "consistency_test"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process", "signal"] }

# HTTP client for requests
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4" }
anyhow = "1"

# Concurrent benchmarking
futures = "0.3"
fastrand = "2"
