[package]
name = "rbac_session_demo"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Lithair RBAC with Session Management Demo"

[dependencies]
lithair-core = { path = "../../lithair-core" }
lithair-macros = { path = "../../lithair-macros" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
bytes = "1.5"
tokio = { version = "1.0", features = ["full"] }

anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
