[package]
name = "replication_stress_test"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Minimal example for testing and debugging Lithair replication issues"

[[bin]]
name = "stress_node"
path = "src/main.rs"

[[bin]]
name = "bombarder"
path = "src/bombarder.rs"

[dependencies]
# Lithair
lithair-core = { path = "../../lithair-core" }
lithair-macros = { path = "../../lithair-macros" }

# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# HTTP
hyper = { version = "1", features = ["full"] }
http = "1"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# HTTP client for bombarder
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
futures = "0.3"

# Stats
md-5 = "0.10"

# Random
rand = "0.8"
