[package]
name = "schema_migration_demo"
version = "0.1.0"
edition = "2021"
description = "Demonstrates Lithair's schema migration detection system"

[[bin]]
name = "schema_demo"
path = "src/main.rs"

[dependencies]
lithair-core = { path = "../../lithair-core" }
lithair-macros = { path = "../../lithair-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.13", features = ["json"] }
