[package]
name = "datatable"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "High-performance data table demo with millions of entries - Full Lithair stack"

[[bin]]
name = "datatable"
path = "src/main.rs"

[dependencies]
lithair-core = { path = "../../../lithair-core" }
lithair-macros = { path = "../../../lithair-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["full"] }
hyper-util = "0.1"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1.0"
futures = "0.3"
